02-test-bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-bad-2
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
